--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -58,6 +58,14 @@
 			<version>4.5.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version> <!-- Usa la última versión disponible -->
+			<scope>provided</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
